<resources>
    <string name="app_name">Music Player</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">https://github.com/ghostman-007/Music-Player</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_songs">Songs</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_artists">Artists</string>
    <string name="menu_genres">Genres</string>
    <string name="menu_playlist">Playlist</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="song_name">Song Name</string>
    <string name="done">DONE</string>

    <string name="edit_song_info">Edit Song Info</string>

    <string name="pref_title_sleep_timer">Sleep Timer</string>
    <string-array name="pref_sync_sleep_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hours</item>
        <item>2 hours</item>
        <item>NONE</item>
    </string-array>

    <string-array name="pref_sync_sleep_values">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>120</item>
        <item>-1</item>
    </string-array>

    <string name="player_notification_title_template">Player: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="player_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

</resources>
